# Crypto_Analyzer

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PR_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  backfill_compare.py  btc_import.py  compare_predictions.py  db_connector.py  deleting_SQL.py  feature_engineering.py  find_predicted_jumps.py  find_predicted_jumps_v2.py  helpers.py  indicators.py  loop_forward_12h.py  loop_w12m_daily.py  loop_wf6m_daily.py  main.py  model_utils.py  mypy.ini  predict.py  predict_6h_30m.py  predict_regressor.py  predict_window.py  predictions_store.py  predictor.py  progress.py  pyproject.toml  readme.md  relearn.py  requirements.txt  retrain_from_errors.py  rules.py  sitecustomize.py  train.py  train_regressor.py
.github/workflows/: bench.yml  ci.yml  ci_benchmark.yml  tests.yml
analysis/: compare_predictions.py  feature_engineering.py  feature_list.json  indicators.py  rules.py  targets.py
api/: backfill_onchain_history.py  mempool_ws_logger.py  onchain.py  server.py
archive/: README.md  run_demo.sh  setup_env.sh
config/: app.example.yaml
crypto_analyzer/: __init__.py  model_manager.py  schemas.py
crypto_analyzer/inference/: __init__.py  _gpu.py  meta_helpers.py
crypto_analyzer/legacy/: __init__.py  ensemble_wrappers.py
db/: btc_import.py  db_connector.py  predictions_store.py
db/data/: crypto_data.sqlite
ml/: __init__.py  backtest.py  ensemble.py  feature_list.json  meta.py  migrace.py  model_performance.json  model_usage.json  model_utils.py  oob.py  oob_cls.json  predict.py  predict_regressor.py  retrain_from_errors.py  time_cv.py  train.py  train_classifier.py  train_from_history.py  train_historic.py  train_meta_classifier.py  train_price.py  train_regressor.py  xgb_price.py
prediction/: predictor.py
reporting/: report_utils.py
scripts/: backtest.py  make_features.py  run_demo.sh  train.py
src/crypto_analyzer/: __init__.py  cli.py  model_manager.py  pipeline.py  schemas.py
src/crypto_analyzer/cli/: __init__.py  train.py
src/crypto_analyzer/data/: binance_import.py  db_connector.py  maintenance.py  predictions_store.py
src/crypto_analyzer/eval/: __init__.py  backtest.py  calibration.py  comparison.py  conformal.py  cv.py  oob.py  regimes.py
src/crypto_analyzer/features/: engineering.py  feature_list.json  selection.py
src/crypto_analyzer/labeling/: rules.py  survival.py  targets.py
src/crypto_analyzer/legacy/: ensemble_core.py
src/crypto_analyzer/models/: boosting.py  ensemble.py  meta.py  model_lstm.py  model_xgboost.py  predict.py  predictor.py  sequential.py  stacking.py  train.py  train_classifier.py  utils.py
src/crypto_analyzer/pipelines/: __init__.py  classification.py
src/crypto_analyzer/reporting/: drift.py
src/crypto_analyzer/utils/: config.py  splitting.py
tests/: sitecustomize.py  test_api.py  test_api_contract.py  test_atomic_write.py  test_backcompat.py  test_backfill_onchain_history.py  test_backtest.py  test_backtest_metrics.py  test_boosting_models.py  test_calibration_utils.py  test_compare_predictions.py  test_conformal_utils.py  test_dead_code_smoke.py  test_drift_monitoring.py  test_feature_extremes.py  test_feature_selection_utils.py  test_features_types.py  test_fetch_hashrate.py  test_fetch_mining_difficulty.py  test_gpu_models.py  test_historic.py  test_import_hygiene.py  test_interval_coverage.py  test_labeling_targets.py  test_lazy_gpu_import.py  test_maintenance.py  test_manual_purge.py  test_match_model_features.py  test_meta.py  test_meta_models.py  test_no_cudf.py  test_oob_helper.py  test_pipeline_smoke.py  test_predictions_store.py  test_price_targets.py  test_regime_metrics.py  test_regressor_fallback.py  test_sequential_models.py  test_smoke_train_price.py  test_stacking_meta.py  (+6 more)
tools/: check_import_time.sh
utils/: config.py  helpers.py  progress.py  splitting.py  timeframes.py
