[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-analyzer"
version = "0.1.0"
description = "Utilities for crypto market analysis"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "xgboost>=2.1,<4",
    "shap>=0.46",
    "numba",
    "requests",
    "pydantic",
    "python-dateutil",
    "tqdm",
    "pyarrow",
    "matplotlib",
    "joblib",
    "PyYAML",
    "fastapi",
    "uvicorn",
    "httpx",
    "ta",
    "torch",
]

[project.optional-dependencies]
dev = [
    "black==24.4.2",
    "ruff>=0.6.8",
    "mypy==1.11.1",
    "pre-commit",
    "vulture",
    "deptry",
    "tuna",
    "threadpoolctl",
    "pandas-stubs",
    "types-requests",
    "joblib-stubs",
    "scikit-learn-stubs",
    "types-tqdm",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "crypto_analyzer*",
    "analysis*",
    "ml*",
    "prediction*",
    "utils*",
    "db*",
]

[tool.deptry]

[tool.deptry.per_rule_ignores]
DEP001 = ["cupy", "psutil"]
DEP002 = [
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "vulture",
    "deptry",
    "tuna",
    "threadpoolctl",
    "pandas-stubs",
    "types-requests",
    "joblib-stubs",
    "scikit-learn-stubs",
    "types-tqdm",
    "types-PyYAML",
]

[tool.ruff]
select = ["E","W","F","I","UP","B","C4","SIM","NPY","RUF100"]
extend-select = ["F401","F403"]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py313"]
